# Test-Driven-Development-with-FastAPI-and-Docker

./: Dockerfile  Dockerfile.prod  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
app/api/: crud.py  summaries.py
app/models/: tortoise.py
tests/: conftest.py  test_ping.py
tests/app/api/: test_create_summary.py  test_delete_summaries.py  test_update_summary.py
